...
            "state" : "translated",
            "value" : "数学表达式，如 1 + 2 * 3、(1+2)*3、3.14 * 2"
          }
        }
      }
    },
    "文件" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "new",
            "value" : ""
...
            "state" : "translated",
            "value" : "新建對話"
          }
        }
      }
    },
    "新建窗口" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "new",
            "value" : ""
...
